--- a/syntaxe_avancee/contextmanager/contextmanager.ipynb
+++ b/syntaxe_avancee/contextmanager/contextmanager.ipynb
@@ -307,8 +307,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "5926923e-c81e-40d5-bf3a-beb095e98ffb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[Errno 2] No such file or directory: 'fichier_inexistant.txt'\n"
+     ]
+    }
+   ],
+   "source": [
+    "try :\n",
+    "    with open(\"fichier_inexistant.txt\", \"r\") as file:\n",
+    "        for line in file:\n",
+    "            print(line.strip())\n",
+    "except FileNotFoundError as f:\n",
+    "    print(f\"{f}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7e11eecd-a8e3-4ec8-beaf-3ddb08e756fc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from contextlib import suppress\n",
+    "\n",
+    "with suppress(FileNotFoundError), open(\"fichier_inexistant.txt\", \"r\") as file:\n",
+    "    for line in file:\n",
+    "        print(line.strip())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "36d097e3-07f4-4716-b765-a5a0821a5b57",
    "metadata": {},
    "outputs": [],
    "source": []
