--- a/metaclasse/DataDescriptor.ipynb
+++ b/metaclasse/DataDescriptor.ipynb
@@ -412,11 +412,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "id": "62750218-5b1a-4b6b-bb7c-d2c51f18f45d",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32.0\n",
+      "43.51398437129301\n",
+      "16\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "class Pyramide:\n",
+    "    def __init__(self, longueur_base: float, hauteur: float):\n",
+    "        self.longueur_base = longueur_base\n",
+    "        self.hauteur = hauteur\n",
+    "\n",
+    "    @property\n",
+    "    def longueur_base(self):\n",
+    "        return self.__longueur_base\n",
+    "        \n",
+    "    @longueur_base.setter\n",
+    "    def longueur_base(self, value):\n",
+    "        if value < 0:\n",
+    "            raise ValueError(\"value is negative\")\n",
+    "        self.__longueur_base = value\n",
+    "        \n",
+    "    @property\n",
+    "    def hauteur(self):\n",
+    "        return self.__hauteur\n",
+    "    @hauteur.setter\n",
+    "    def hauteur(self, value):\n",
+    "        if value < 0:\n",
+    "            raise ValueError(\"value is negative\")\n",
+    "        self.__hauteur = value\n",
+    "        \n",
+    "    @property\n",
+    "    def aire_base(self):\n",
+    "        return self.__longueur_base**2\n",
+    "        \n",
+    "    @property\n",
+    "    def perimeter(self):\n",
+    "        return self.aire_base * self.__hauteur * (1.0/3.0)\n",
+    "\n",
+    "    @property\n",
+    "    def volume(self):\n",
+    "        return 4*self.__longueur_base + 4*math.sqrt( (math.sqrt(2)* self.aire_base / 2)  + self.__hauteur**2)\n",
+    "\n",
+    "pyramide = Pyramide(4, 6)\n",
+    "print(pyramide.perimeter)\n",
+    "print(pyramide.volume)\n",
+    "print(pyramide.aire_base)\n"
+   ]
   },
   {
    "cell_type": "code",
